<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBg_grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10dp"
        android:background="@color/titleBg">
        <TextView
            style="@style/titleTvStyle"
            android:text="@string/app_name"/>
        <ImageView
            android:id="@+id/main_iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_setting"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="30dp">
        <EditText
            android:id="@+id/main_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:maxLength="8"
            android:background="@drawable/search_keyword_bg"
            android:hint="请输入查询汉字">
            <requestFocus/>
        </EditText>
        <ImageView
            android:id="@+id/main_iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:weightSum="4">
        <TextView
            android:id="@+id/main_tv_pinyin"
            style="@style/mainTvStyle"
            android:drawableTop="@mipmap/m_pinyin"
            android:text="@string/main_tv_pinyin"/>
        <TextView
            android:id="@+id/main_tv_bushou"
            style="@style/mainTvStyle"
            android:drawableTop="@mipmap/m_bushou"
            android:text="@string/main_tv_bushou"/>

        <TextView
            android:id="@+id/main_tv_chengyu"
            style="@style/mainTvStyle"
            android:drawableTop="@mipmap/m_chengyu"
            android:text="@string/main_tv_chengyu" />

        <TextView
            android:id="@+id/main_tv_tuwen"
            style="@style/mainTvStyle"
            android:drawableTop="@mipmap/m_xiangji"
            android:text="@string/main_tv_tuwen"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tv_yiju"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/main_tv_juzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_tv_yiju2"
            android:layout_marginTop="10dp"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>